# How to merge MM changes into this site

## Copy over

* Copy in, overwrite, but save our local extra files
    + _data/ui-text.yml
    + _includes
    + _layouts
    + _sass

* Manually force the line endings back to Unix (LF) from Windows (CRLF)

---

## Carefully merge

* _data/navigation.yml

* _includes/feature_row
    + Add back video_id case for feature_row(s)

* _includes/page__hero.html
    + Add if statement to use page.description in favour of page.excerpt
```
  {% elsif page.description %}
    <p class="page__lead">{{ page.description | markdownify | remove: "<p>" | remove: "</p>" }}</p>
```

* _config.yml
    + Merge by hand, looking for new keys
    + exclude .idea from watch

* _includes/masthead
    + add UK map
```
<div class="ukmap">
  <img src="/assets/chrome/map_uk_200x.png">
  <span class="estbased">Established 2004,</span>
  <span class="estbased">UK-based</span>
  <span class="phonenumber">+44 (0)207 1835698</span>
</div>
```
