@@ -34,7 +34,7 @@
       </nav>
     </div>
     <div class="ukmap">
-      <img src="/assets/chrome/map_uk_200x.png">
+      <img src="/assets/chrome/map_uk_200x.png" />
       <span class="estbased">Established 2004,</span>
       <span class="estbased">UK-based</span>
       <span class="phonenumber">+44 (0)207 1835698</span>
